add: design day's agenda

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -139,9 +139,9 @@
         <a data-day="mobile-people-day" href="#mobile-people-day" class="btn rounded"><span
           class="full-view">Mobile People Day</span><span class="abbr-view">MBL</span>
           <span class="stream-date">9 Aug</span></a>
-        <!--        <a data-day="design-friday" href="#design-friday" class="btn rounded"><span-->
-        <!--          class="full-view">Design Friday</span>-->
-        <!--          <span class="abbr-view">DSGN</span> <span class="stream-date">9 Aug</span></a>-->
+        <a data-day="design-friday" href="#design-friday" class="btn rounded"><span
+          class="full-view">Design Friday</span>
+          <span class="abbr-view">DSGN</span> <span class="stream-date">9 Aug</span></a>
         <a data-day="js-sat" href="#js-sat" class="btn rounded"><span class="full-view">JS/Frontend</span><span
           class="abbr-view">JS/FE</span>
           <span class="stream-date">10 Aug</span></a>
@@ -150,6 +150,8 @@
           <span
             class="stream-date">11 Aug</span></a>
       </p>
+
+      <!-- Mobile Day -->
 
       <ul class="schedule mobile-people-day">
         <li>
@@ -354,75 +356,125 @@
         </li>
       </ul>
 
-      <!--      <ul class="schedule design-friday">-->
-      <!--        <li>-->
-      <!--          <h3><span class="schedule-time">9:00</span> Registration</h3>-->
-      <!--        </li>-->
-      <!--        <li>-->
-      <!--          <h3><span class="schedule-time">10:00</span> Opening. Welcome speech from conference-->
-      <!--            organizers-->
-      <!--          </h3>-->
-      <!--          <p class="text-sm">DesignSpot Crew</p>-->
-      <!--          <p class="text-sm">30min | RU-->
-      <!--            <span class="talk-place">Red Stage</span>-->
-      <!--          </p>-->
-      <!--        </li>-->
-      <!--        <li>-->
-      <!--          <h3><span class="schedule-time">10:30</span><a href="speakers/kseniya-koltun.html">Продуктовая мобильная-->
-      <!--            разработка - не дизайном единым. (не) про дизайн, командную работу и справедливость</a>-->
-      <!--          </h3>-->
-      <!--          <p class="text-sm">Kseniya Koltun-->
-      <!--            <small>| FaceMetrics</small>-->
-      <!--          </p>-->
-      <!--          <p class="text-sm">30min | RU-->
-      <!--            <span class="talk-place">Red Stage</span>-->
-      <!--          </p>-->
-      <!--        </li>-->
-      <!--        <li>-->
-      <!--          <h3><span class="schedule-time">11:00</span><a href="speakers/denis-trusilo.html">Видеопродакшен без-->
-      <!--            комплексов: Почему красивые ролики снимать бессмысленно</a>-->
-      <!--          </h3>-->
-      <!--          <p class="text-sm">Denis Trusilo-->
-      <!--            <small>| Pocket Rocket</small>-->
-      <!--          </p>-->
-      <!--          <p class="text-sm">30min | RU-->
-      <!--            <span class="talk-place">Red Stage</span>-->
-      <!--          </p>-->
-      <!--        </li>-->
-      <!--        <li>-->
-      <!--          <h3><span class="schedule-time">11:30</span><a href="speakers/george-kvasnikov.html">Креативность начинается с-->
-      <!--            незнания</a>-->
-      <!--          </h3>-->
-      <!--          <p class="text-sm">George Kvasnikov-->
-      <!--            <small>| Fantasy</small>-->
-      <!--          </p>-->
-      <!--          <p class="text-sm">30min | EN-->
-      <!--            <span class="talk-place">Red Stage</span>-->
-      <!--          </p>-->
-      <!--        </li>-->
-      <!--        <li>-->
-      <!--          <h3><span class="schedule-time">12:00</span><a href="speakers/sergey-kireev.html">Все дизайнеры —-->
-      <!--            популисты</a>-->
-      <!--          </h3>-->
-      <!--          <p class="text-sm">Sergey Kireev-->
-      <!--            <small>| AIC</small>-->
-      <!--          </p>-->
-      <!--          <p class="text-sm">30min | EN-->
-      <!--            <span class="talk-place">Red Stage</span>-->
-      <!--          </p>-->
-      <!--        </li>-->
-      <!--        <li>-->
-      <!--          <h3><span class="schedule-time">12:30</span><a href="speakers/alexander-nelidkin.html">Лучше стыдно, чем-->
-      <!--            никогда</a>-->
-      <!--          </h3>-->
-      <!--          <p class="text-sm">Alexander Nelidkin-->
-      <!--            <small>| AIC</small>-->
-      <!--          </p>-->
-      <!--          <p class="text-sm">30min | EN-->
-      <!--            <span class="talk-place">Red Stage</span>-->
-      <!--          </p>-->
-      <!--        </li>-->
-      <!--      </ul>-->
+      <!-- Design Day -->
+
+      <ul class="schedule design-friday">
+        <li>
+          <h3><span class="schedule-time">9:00</span> Registration</h3>
+        </li>
+        <!--              <li>-->
+        <!--                <h3><span class="schedule-time">10:00</span> Opening. Welcome speech from conference-->
+        <!--                  organizers-->
+        <!--                </h3>-->
+        <!--                <p class="text-sm">DesignSpot Crew</p>-->
+        <!--                <p class="text-sm">30min | RU-->
+        <!--                  <span class="talk-place">Red Stage</span>-->
+        <!--                </p>-->
+        <!--              </li>-->
+        <li>
+          <h3><span class="schedule-time">10:00</span><a href="speakers/george-kvasnikov.html">Креативность начинается с
+            незнания</a>
+          </h3>
+          <p class="text-sm">George Kvasnikov
+            <small>| Fantasy</small>
+          </p>
+          <p class="text-sm">60min | RU
+            <span class="talk-place">Red Stage</span>
+          </p>
+        </li>
+        <li>
+          <h3><span class="schedule-time">11:00</span><a href="speakers/sergey-kireev.html">Все дизайнеры —
+            популисты</a>
+          </h3>
+          <p class="text-sm">Sergey Kireev
+            <small>| AIC</small>
+          </p>
+          <p class="text-sm">60min | RU
+            <span class="talk-place">Red Stage</span>
+          </p>
+        </li>
+        <li>
+          <h3><span class="schedule-time">12:00</span>Другой веб
+          </h3>
+          <p class="text-sm">Pavel Kedich
+            <small>| Readymag</small>
+          </p>
+          <p class="text-sm">60min | RU
+            <span class="talk-place">Red Stage</span>
+          </p>
+        </li>
+        <li>
+          <h3><span class="schedule-time">13:00</span> Lunch break | 60min</h3>
+        </li>
+        <li>
+          <h3><span class="schedule-time">14:00</span><a href="speakers/denis-trusilo.html">Видеопродакшен без
+            комплексов: Почему красивые ролики снимать бессмысленно</a>
+          </h3>
+          <p class="text-sm">Denis Trusilo
+            <small>| Pocket Rocket</small>
+          </p>
+          <p class="text-sm">60min | RU
+            <span class="talk-place">Red Stage</span>
+          </p>
+        </li>
+        <li>
+          <h3><span class="schedule-time">15:00</span>Сколько стоит обучение в бесплатной школе DesignSpot
+            School?
+          </h3>
+          <p class="text-sm">Mikita Zenchanka
+            <small>| EPAM</small>
+          </p>
+          <p class="text-sm">60min | RU
+            <span class="talk-place">Red Stage</span>
+          </p>
+        </li>
+        <li>
+          <h3><span class="schedule-time">16:00</span><a href="speakers/alexander-nelidkin.html">Лучше стыдно, чем
+            никогда</a>
+          </h3>
+          <p class="text-sm">Alexander Nelidkin
+            <small>| AIC</small>
+          </p>
+          <p class="text-sm">60min | EN
+            <span class="talk-place">Red Stage</span>
+          </p>
+        </li>
+        <li>
+          <h3><span class="schedule-time">17:00</span>Генеративный дизайн: инструменты дизайнера
+            будущего
+          </h3>
+          <p class="text-sm">Mitya Osadchuk
+            <small>| Mail.ru</small>
+          </p>
+          <p class="text-sm">60min | RU
+            <span class="talk-place">Red Stage</span>
+          </p>
+        </li>
+        <li>
+          <h3><span class="schedule-time">18:00</span><a href="speakers/kseniya-koltun.html">Продуктовая мобильная
+            разработка - не дизайном единым. (не) про дизайн, командную работу и справедливость</a>
+          </h3>
+          <p class="text-sm">Kseniya Koltun
+            <small>| FaceMetrics</small>
+          </p>
+          <p class="text-sm">60min | RU
+            <span class="talk-place">Red Stage</span>
+          </p>
+        </li>
+        <li>
+          <h3><span class="schedule-time">19:00</span>TBD
+
+          </h3>
+          <p class="text-sm">Ihar Yukhnevich
+            <small>| Yukhnevich.com</small>
+          </p>
+          <p class="text-sm">60min | RU
+            <span class="talk-place">Red Stage</span>
+          </p>
+        </li>
+      </ul>
+
+      <!-- JS Day SAT-->
 
       <ul class="schedule first-day js-sat">
         <li>
@@ -665,6 +717,8 @@
         </li>
         <li class="third-stream"></li>
       </ul>
+
+      <!-- JS Day SUN-->
 
       <ul class="schedule second-day js-sun">
         <li>
