add: yan ageennko to speakers

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -894,9 +894,11 @@
           </p>
         </li>
         <li class="third-stream">
-          <h3><span class="schedule-time">16:10</span>Panel Discussion</h3>
-          <p class="text-sm"></p>
-          <p class="text-sm">40min | EN
+          <h3><span class="schedule-time">16:10</span><a href="speakers/yan-ageenko.html">Дизайн-система на HTML/CSS</a></h3>
+          <p class="text-sm">Yan Ageenko
+            <small>| IT-Academy</small>
+          </p>
+          <p class="text-sm">40min | RU
             <span class="talk-place">Blue Stage</span>
           </p>
         </li>
@@ -1016,7 +1018,6 @@
         and <a
           target="_blank" href="https://twitter.com/rollingscopes">Twitter</a>
         to be the first to learn the news</p>
-
       <p class="content-xsm">Our hashtag on social media is <a
         href="https://twitter.com/hashtag/rollingscopes?vertical=default&src=hash">#rollingscopes</a>.
         Or contact us directly on our email <a href="mailto:rolling.scopes@gmail.com">rolling.scopes@gmail.com</a></p>
