fix: dsgn day title

--- a/app/index.html
+++ b/app/index.html
@@ -215,7 +215,7 @@
           <img src="images/tickets/design_ticket.jpg" alt="">
           <div class="ticket-card-body">
             <p>1 day, 1 stream</p>
-            <h3>"Design Friday" Ticket</h3>
+            <h3>"Design Day" Ticket</h3>
             <p>Access to design stream, carefully baked by the DesignSpot community.
             </p>
             <p class="text-center"><a target="_blank" class="btn"
