--- a/app/schedule.html
+++ b/app/schedule.html
@@ -140,7 +140,7 @@
           class="full-view">Mobile People Day</span><span class="abbr-view">MBL</span>
           <span class="stream-date">9 Aug</span></a>
         <a data-day="design-friday" href="#design-friday" class="btn rounded"><span
-          class="full-view">Design Friday</span>
+          class="full-view">Design Day</span>
           <span class="abbr-view">DSGN</span> <span class="stream-date">9 Aug</span></a>
         <a data-day="js-sat" href="#js-sat" class="btn rounded"><span class="full-view">JS/Frontend</span><span
           class="abbr-view">JS/FE</span>
@@ -999,7 +999,7 @@
           <img src="images/tickets/design_ticket.jpg" alt="">
           <div class="ticket-card-body">
             <p>1 day, 1 stream</p>
-            <h3>"Design Friday" Ticket</h3>
+            <h3>"Design Day" Ticket</h3>
             <p>Access to design stream, carefully baked by the DesignSpot community.
             </p>
             <p class="text-center"><a target="_blank" class="btn"
