add: gurtam to partners

--- a/app/partners.html
+++ b/app/partners.html
@@ -164,6 +164,11 @@
           </a>
         </li>
         <li>
+          <a class="partner-silver" target="_blank" href="https://gurtam.com/">
+            <img src="images/partners/logo-gurtam.svg" alt="gurtam logo"/>
+          </a>
+        </li>
+        <li>
           <a class="partner-bronze" target="_blank" href="https://www.datarobot.com">
             <img src="images/partners/logo-datarobot.svg" alt="datarobot logo"/>
           </a>
