upd: tickets section

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -1012,6 +1012,11 @@
           </div>
         </div>
       </div>
+      <div class="content-md">
+        <p class="padding-top-md">For all questions related to tickets, contact us <br> <a class="bold"
+                                                                                           href="mailto:rollingscopes.tickets@gmail.com">rollingscopes.tickets@gmail.com</a>
+        </p>
+      </div>
     </div>
   </section>
 
