--- a/app/about.html
+++ b/app/about.html
@@ -145,19 +145,82 @@
       <p class="text-md">Let’s Roll!</p>
     </div>
   </section>
-  <section class="shorted">
-    <div class="content-sm text-center">
-      <p class="text-lg">The Rolling Scopes Conference</p>
-      <p class="text-md">August 9-11, 2019</p>
-
-      <p class="text-center"><a class="btn margin-bottom-md"
-                                href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">Buy a Ticket</a>
-      </p>
-
-      <p>Follow us on <a target="_blank" href="https://twitter.com/rollingscopes">Twitter</a> or
-        <a target="_blank" href="https://www.facebook.com/groups/TheRollingScopes/">Facebook</a>
-        to learn about the tickets and other news first!</p>
-
+  <section>
+    <div class="content-lg">
+      <h2>Tickets</h2>
+      <div class="ticket-set">
+        <div class="ticket-card">
+          <p>
+            August 9-11
+          </p>
+          <img src="images/tickets/patron_ticket.jpg" alt="">
+          <div class="ticket-card-body">
+            <p>3 Days, All streams</p>
+            <h3>"Patron" Ticket</h3>
+            <p>For those who wish to support the conference and help make it better.</p>
+            <ul>
+              <li> Unlimited access to the RSConf2019</li>
+              <li>Especial participant package</li>
+            </ul>
+            <p class="text-center"><a target="_blank" class="btn"
+                                      href="https://imaguru.by/product/the-rolling-scopes-conference-2019/">200 BYN</a>
+            </p>
+          </div>
+        </div>
+        <div class="ticket-card">
+          <p>
+            August 10-11
+          </p>
+          <img src="images/tickets/js_fe_ticket.jpg" alt="">
+          <div class="ticket-card-body">
+            <p>2 Days, All streams</p>
+            <h3>"JavaScript / Front-end Weekend" Ticket</h3>
+            <p>Access to JavaScript/Front-end streams during the weekend, tightly wrapped by The Rolling Scopes.</p>
+            <p class="text-center"><a target="_blank" class="btn"
+                                      href="https://imaguru.by/product/the-rolling-scopes-conference-2019-javascript-front-end-weekend/">120
+              BYN</a>
+            </p>
+          </div>
+        </div>
+        <div class="ticket-card">
+          <p>
+            August 9
+          </p>
+          <img src="images/tickets/mobile_ticket.jpg" alt="">
+          <div class="ticket-card-body">
+            <p>1 day, 2 streams</p>
+            <h3>"Mobile People Day" Ticket</h3>
+            <p>
+              Access to mobile streams, mastered by the MobilePeople community.
+            </p>
+            <p class="text-center"><a target="_blank" class="btn"
+                                      href="https://imaguru.by/product/the-rolling-scopes-conference-2019-mobile-friday-ticket/">60
+              BYN</a>
+            </p>
+          </div>
+        </div>
+        <div class="ticket-card">
+          <p>
+            August 9
+          </p>
+          <img src="images/tickets/design_ticket.jpg" alt="">
+          <div class="ticket-card-body">
+            <p>1 day, 1 stream</p>
+            <h3>"Design Day" Ticket</h3>
+            <p>Access to design stream, carefully baked by the DesignSpot community.
+            </p>
+            <p class="text-center"><a target="_blank" class="btn"
+                                      href="https://imaguru.by/product/the-rolling-scopes-conference-2019-design-friday-ticket/">60
+              BYN</a>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="content-md">
+        <p class="padding-top-md">For all questions related to tickets, contact us <br> <a class="bold"
+                                                                                           href="mailto:rollingscopes.tickets@gmail.com">rollingscopes.tickets@gmail.com</a>
+        </p>
+      </div>
     </div>
   </section>
 
