add: movavi to travel partners

--- a/app/mobile.html
+++ b/app/mobile.html
@@ -164,8 +164,6 @@
           Ticket</a>
       </p>
       <p class="text-lg padding-top-md">See you there!</p>
-
-
     </div>
   </section>
 
@@ -672,6 +670,11 @@
         <li>
           <a target="_blank" href="https://www.jetbrains.com/">
             <img src="images/partners/logo-jetbrains-2.svg" alt="jetbrains logo">
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.movavi.com/">
+            <img src="images/partners/logo-movavi.svg" alt="movavi logo">
           </a>
         </li>
       </ul>
