--- a/app/partners.html
+++ b/app/partners.html
@@ -232,6 +232,11 @@
             <img src="images/partners/logo-jetbrains-2.svg" alt="jetbrains logo">
           </a>
         </li>
+        <li>
+          <a target="_blank" href="https://www.movavi.com/">
+            <img src="images/partners/logo-movavi.svg" alt="movavi logo">
+          </a>
+        </li>
       </ul>
 
       <h2>Info Partners</h2>
