upd: conf title

--- a/app/index.html
+++ b/app/index.html
@@ -135,8 +135,8 @@
 
   <section class="announcement" data-color="#6CD9FF">
     <div class="content-md">
+      <img class="conf-title" src="images/rs_conf_title.svg" alt="The Rolling Scopes Conference">
       <!--      <img src="images/logo-snowflake.svg" alt="The Rolling Scopes Conference Logo">-->
-      <h1>The Rolling Scopes <br> Conference</h1>
       <p class="bold text-md">Minsk, 9-11 August 2019</p>
       <p>
         <!--        <a class="btn" target="_blank"-->
