fix email for tickets

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -1014,8 +1014,8 @@
         </div>
       </div>
       <div class="content-md">
-        <p class="padding-top-md">For all questions related to tickets, contact us <br> <a class="bold"
-                                                                                           href="mailto:rollingscopes.tickets@gmail.com">rollingscopes.tickets@gmail.com</a>
+        <p class="padding-top-md">For all questions related to tickets,<br> <a class="bold"
+                                                                                           href="mailto:rollingscopes.tickets@gmail.com">contact us</a>
         </p>
       </div>
     </div>
