fix: social icons in nav, fix denisov's photo size

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -613,7 +613,7 @@
               <span class="speaker-company">Turtle Inc</span>
               <h3><a href="speakers/venkat-dinavahi.html">Venkat Dinavahi</a></h3>
               <p>
-                <small>Berlin, Germany</small>
+                <small>New York, United States</small>
               </p>
             </figcaption>
           </figure>
