upd: speakers' details

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -421,7 +421,7 @@
           <h3><span class="schedule-time">15:00</span>Сколько стоит обучение в бесплатной школе DesignSpot
             School?
           </h3>
-          <p class="text-sm">Mikita Zenchanka
+          <p class="text-sm">Nikita Zenchenko
             <small>| EPAM</small>
           </p>
           <p class="text-sm">60min | RU
