--- a/app/speakers.html
+++ b/app/speakers.html
@@ -649,7 +649,7 @@
           <figure>
             <img src="images/speakers/dmitriy-movchan.jpg" alt="Dmitriy Movchan photo">
             <figcaption>
-              <span class="speaker-company">KasperskyLab</span>
+              <span class="speaker-company">Revolut</span>
               <h3><a href="speakers/dmitriy-movchan.html">Dmitriy Movchan</a></h3>
               <p>
                 <small>Moscow, Russia</small>
