add speaker: birukov

--- a/app/mobile.html
+++ b/app/mobile.html
@@ -487,7 +487,7 @@
             ответственности мобильного разработчика</a>
           </h3>
           <p class="text-sm">Alexey Bykov
-            <small>| KasperskyLab</small>
+            <small>| Revolut</small>
           </p>
           <p class="text-sm">50min | RU
             <span class="talk-place">Green Stage</span>
@@ -605,7 +605,7 @@
           </a>
         </li>
         <li>
-          <a class="partner-silver" target="_blank" href="https://gurtam.com/">
+          <a class="partner-silver" title="Gurtam is a developer and provider of fleet management, IoT and M2M software. For more than 16 years, Gurtam solutions have entered into the national markets of 130 countries with over 2,100,000 units being currently tracked worldwide. The company was founded in 2002 and is headquartered in Minsk." target="_blank" href="https://gurtam.com/ru/about">
             <img src="images/partners/logo-gurtam.png" alt="gurtam logo"/>
           </a>
         </li>
