--- a/app/schedule.html
+++ b/app/schedule.html
@@ -297,7 +297,7 @@
             ответственности мобильного разработчика</a>
           </h3>
           <p class="text-sm">Alexey Bykov
-            <small>| KasperskyLab</small>
+            <small>| Revolut</small>
           </p>
           <p class="text-sm">50min | RU
             <span class="talk-place">Green Stage</span>
@@ -740,11 +740,21 @@
             <span class="talk-place">Red Stage</span>
           </p>
         </li>
+<!--        <li class="second-stream">-->
+<!--          <h3><span class="schedule-time">11:00</span><a href="speakers/vitali-lashchanka.html"> Fail Fast approach in-->
+<!--            Frontend Development-->
+<!--          </a></h3>-->
+<!--          <p class="text-sm">Vitali Lashchanka-->
+<!--            <small>| Evolution Gaming</small>-->
+<!--          </p>-->
+<!--          <p class="text-sm">30min | EN-->
+<!--            <span class="talk-place">Green Stage</span>-->
+<!--          </p>-->
+<!--        </li>-->
         <li class="second-stream">
-          <h3><span class="schedule-time">11:00</span><a href="speakers/vitali-lashchanka.html"> Fail Fast approach in
-            Frontend Development
+          <h3><span class="schedule-time">11:00</span><a href="speakers/pablo-birukov.html"> JavaScript that scales
           </a></h3>
-          <p class="text-sm">Vitali Lashchanka
+          <p class="text-sm">Pablo Birukov
             <small>| Evolution Gaming</small>
           </p>
           <p class="text-sm">30min | EN
