--- a/app/speakers.html
+++ b/app/speakers.html
@@ -790,6 +790,18 @@
             </figcaption>
           </figure>
         </li>
+        <li>
+          <figure>
+            <img src="images/speakers/pablo-birukov.jpg" alt="Pablo Birukov photo">
+            <figcaption>
+              <span class="speaker-company">Evolution Gaming</span>
+              <h3><a href="speakers/pablo-birukov.html">Pablo Birukov</a></h3>
+              <p>
+                <small> Riga, Latvia</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
       </ul>
     </div>
   </section>
