add: wadline to info partners

--- a/app/partners.html
+++ b/app/partners.html
@@ -287,6 +287,11 @@
             <img src="images/partners/logo-kvby.svg" alt="kv.by logo"/>
           </a>
         </li>
+        <li>
+          <a target="_blank" href="https://wadline.ru/">
+            <img src="images/partners/logo-wadline.svg" alt="wadline logo"/>
+          </a>
+        </li>
       </ul>
 
       <p>
