add: itbeard to info partners

--- a/app/partners.html
+++ b/app/partners.html
@@ -292,6 +292,11 @@
             <img src="images/partners/logo-wadline.svg" alt="wadline logo"/>
           </a>
         </li>
+        <li>
+          <a title="АйТиБорода" target="_blank" href="https://www.youtube.com/itbeard">
+            <img src="images/partners/logo-itbeard.jpg" alt="itbeard logo"/>
+          </a>
+        </li>
       </ul>
 
       <p>
