add speaker: smirnov

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -650,10 +650,9 @@
           </p>
         </li>
         <li class="second-stream">
-          <h3><span class="schedule-time">16:10</span><a href="speakers/timofey-lavrenuyk.html">Building an Offline
-            first app with Persistence storage</a></h3>
-          <p class="text-sm">Timofey Lavrenuyk
-            <small>| KeepSolid</small>
+          <h3><span class="schedule-time">16:10</span><a href="speakers/andrew-smirnov.html">Фронтенд говорит</a></h3>
+          <p class="text-sm">Andrew Smirnov
+            <small>| IPONWEB</small>
           </p>
           <p class="text-sm">40min | RU
             <span class="talk-place">Green Stage</span>
