--- a/app/speakers.html
+++ b/app/speakers.html
@@ -293,20 +293,6 @@
             </figcaption>
           </figure>
         </li>
-
-        <li>
-          <figure>
-            <img src="images/speakers/timofey-lavrenuyk.jpg" alt="Timofey Lavrenuyk photo">
-            <figcaption>
-              <span class="speaker-company">KeepSolid</span>
-              <h3><a href="speakers/timofey-lavrenuyk.html">Timofey Lavrenuyk</a></h3>
-              <p>
-                <small>Odessa, Ukraine</small>
-              </p>
-            </figcaption>
-          </figure>
-        </li>
-
         <li>
           <figure>
             <img src="images/speakers/alexander-saft.jpg" alt="Alexander Saft photo">
@@ -798,6 +784,18 @@
               <h3><a href="speakers/pablo-birukov.html">Pablo Birukov</a></h3>
               <p>
                 <small> Riga, Latvia</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img src="images/speakers/andrew-smirnov.jpg" alt="Andrew Smirnov photo">
+            <figcaption>
+              <span class="speaker-company">IPONWEB</span>
+              <h3><a href="speakers/andrew-smirnov.html">Andrew Smirnov</a></h3>
+              <p>
+                <small> Moscow, Russia</small>
               </p>
             </figcaption>
           </figure>
