add speaker: zenchenko

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -418,8 +418,8 @@
           </p>
         </li>
         <li>
-          <h3><span class="schedule-time">15:00</span>Сколько стоит обучение в бесплатной школе DesignSpot
-            School?
+          <h3><span class="schedule-time">15:00</span><a href="speakers/nikita-zenchenko.html">Сколько стоит обучение в бесплатной школе DesignSpot
+            School?</a>
           </h3>
           <p class="text-sm">Nikita Zenchenko
             <small>| EPAM</small>
