--- a/app/speakers.html
+++ b/app/speakers.html
@@ -800,6 +800,19 @@
             </figcaption>
           </figure>
         </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/nikita-zenchenko.jpg" alt="Nikita Zenchenko photo">
+            <figcaption>
+              <span class="speaker-company">EPAM</span>
+              <h3><a href="speakers/andrew-smirnov.html">Nikita Zenchenko</a></h3>
+              <p>
+                <small> Minsk, Belarus</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
       </ul>
     </div>
   </section>
