add speaker: pavel kedich

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -394,7 +394,7 @@
           </p>
         </li>
         <li>
-          <h3><span class="schedule-time">12:00</span>Другой веб
+          <h3><span class="schedule-time">12:00</span><a href="speakers/pavel-kedich.html">Другой веб</a>
           </h3>
           <p class="text-sm">Pavel Kedich
             <small>| Readymag</small>
