--- a/app/speakers.html
+++ b/app/speakers.html
@@ -813,6 +813,18 @@
             </figcaption>
           </figure>
         </li>
+        <li>
+        <figure>
+          <img src="images/speakers/pavel-kedich.jpg" alt="Pavel Kedich photo">
+          <figcaption>
+            <span class="speaker-company">Readymag</span>
+            <h3><a href="speakers/pavel-kedich.html">Pavel Kedich</a></h3>
+            <p>
+              <small> Riga, Latvia</small>
+            </p>
+          </figcaption>
+        </figure>
+        </li>
       </ul>
     </div>
   </section>
