--- a/app/schedule.html
+++ b/app/schedule.html
@@ -418,7 +418,8 @@
           </p>
         </li>
         <li>
-          <h3><span class="schedule-time">15:00</span><a href="speakers/nikita-zenchenko.html">Сколько стоит обучение в бесплатной школе DesignSpot
+          <h3><span class="schedule-time">15:00</span><a href="speakers/nikita-zenchenko.html">Сколько стоит обучение в
+            бесплатной школе DesignSpot
             School?</a>
           </h3>
           <p class="text-sm">Nikita Zenchenko
@@ -573,13 +574,15 @@
           </p>
         </li>
         <li class="third-stream">
-          <h3><span class="schedule-time">12:40</span>Panel Discussion</h3>
-          <p class="text-sm"></p>
-          <p class="text-sm">30min | EN
+          <h3><span class="schedule-time">12:40</span><a href="speakers/aliaksandr-adzerykha.html"> Front-end
+            development for Enterprise</a></h3>
+          <p class="text-sm">Aliaksandr Adzerykha
+            <small>| EPAM</small>
+          </p>
+          <p class="text-sm">30min | RU
             <span class="talk-place">Blue Stage</span>
           </p>
         </li>
-
         <li class="first-stream">
           <h3><span class="schedule-time">13:20</span><a href="speakers/andre-gloukhmantchouk.html">What's next for
             cross platform mobile development?</a></h3>
@@ -739,17 +742,17 @@
             <span class="talk-place">Red Stage</span>
           </p>
         </li>
-<!--        <li class="second-stream">-->
-<!--          <h3><span class="schedule-time">11:00</span><a href="speakers/vitali-lashchanka.html"> Fail Fast approach in-->
-<!--            Frontend Development-->
-<!--          </a></h3>-->
-<!--          <p class="text-sm">Vitali Lashchanka-->
-<!--            <small>| Evolution Gaming</small>-->
-<!--          </p>-->
-<!--          <p class="text-sm">30min | EN-->
-<!--            <span class="talk-place">Green Stage</span>-->
-<!--          </p>-->
-<!--        </li>-->
+        <!--        <li class="second-stream">-->
+        <!--          <h3><span class="schedule-time">11:00</span><a href="speakers/vitali-lashchanka.html"> Fail Fast approach in-->
+        <!--            Frontend Development-->
+        <!--          </a></h3>-->
+        <!--          <p class="text-sm">Vitali Lashchanka-->
+        <!--            <small>| Evolution Gaming</small>-->
+        <!--          </p>-->
+        <!--          <p class="text-sm">30min | EN-->
+        <!--            <span class="talk-place">Green Stage</span>-->
+        <!--          </p>-->
+        <!--        </li>-->
         <li class="second-stream">
           <h3><span class="schedule-time">11:00</span><a href="speakers/pablo-birukov.html"> JavaScript that scales
           </a></h3>
@@ -1024,7 +1027,8 @@
       </div>
       <div class="content-md">
         <p class="padding-top-md">For all questions related to tickets,<br> <a class="bold"
-                                                                                           href="mailto:rollingscopes.tickets@gmail.com">contact us</a>
+                                                                               href="mailto:rollingscopes.tickets@gmail.com">contact
+          us</a>
         </p>
       </div>
     </div>
