--- a/app/speakers.html
+++ b/app/speakers.html
@@ -26,7 +26,7 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#603cba">
   <meta name="theme-color" content="#ffffff">  <!-- Place favicon.ico in the root directory -->
-    <link href="https://fonts.googleapis.com/css?family=Exo+2:400,700&amp;subset=cyrillic,latin-ext" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Exo+2:400,700&amp;subset=cyrillic,latin-ext" rel="stylesheet">
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
@@ -800,7 +800,18 @@
             </figcaption>
           </figure>
         </li>
-
+        <li>
+          <figure>
+            <img src="images/speakers/aliaksandr-adzerykha.jpg" alt="Aliaksandr Adzerykha photo">
+            <figcaption>
+              <span class="speaker-company">EPAM</span>
+              <h3><a href="speakers/aliaksandr-adzerykha.html">Aliaksandr Adzerykha</a></h3>
+              <p>
+                <small> Minsk, Belarus</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
         <li>
           <figure>
             <img src="images/speakers/nikita-zenchenko.jpg" alt="Nikita Zenchenko photo">
@@ -814,16 +825,16 @@
           </figure>
         </li>
         <li>
-        <figure>
-          <img src="images/speakers/pavel-kedich.jpg" alt="Pavel Kedich photo">
-          <figcaption>
-            <span class="speaker-company">Readymag</span>
-            <h3><a href="speakers/pavel-kedich.html">Pavel Kedich</a></h3>
-            <p>
-              <small> Riga, Latvia</small>
-            </p>
-          </figcaption>
-        </figure>
+          <figure>
+            <img src="images/speakers/pavel-kedich.jpg" alt="Pavel Kedich photo">
+            <figcaption>
+              <span class="speaker-company">Readymag</span>
+              <h3><a href="speakers/pavel-kedich.html">Pavel Kedich</a></h3>
+              <p>
+                <small> Riga, Latvia</small>
+              </p>
+            </figcaption>
+          </figure>
         </li>
       </ul>
     </div>
@@ -863,7 +874,6 @@
 <button class="btn btn-primary scroll-top" data-scroll="up" type="button">
   <i class="fa fa-chevron-up"></i>
 </button>
-
 
 
 <!-- build:js scripts/vendor.js -->
