add speaker: Mitya Osadchuk

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -441,8 +441,8 @@
           </p>
         </li>
         <li>
-          <h3><span class="schedule-time">17:00</span>Генеративный дизайн: инструменты дизайнера
-            будущего
+          <h3><span class="schedule-time">17:00</span><a href="speakers/mitya-osadchuk.html">Генеративный дизайн: инструменты дизайнера
+            будущего</a>
           </h3>
           <p class="text-sm">Mitya Osadchuk
             <small>| Mail.ru</small>
