--- a/app/speakers.html
+++ b/app/speakers.html
@@ -836,10 +836,21 @@
             </figcaption>
           </figure>
         </li>
+        <li>
+          <figure>
+            <img src="images/speakers/mitya-asadchuk.jpg" alt="Mitya Osadchuk photo">
+            <figcaption>
+              <span class="speaker-company">Mail.Ru Group</span>
+              <h3><a href="speakers/mitya-osadchuk.html">Mitya Osadchuk</a></h3>
+              <p>
+                <small>Moscow, Russia</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
       </ul>
     </div>
   </section>
-
 
   <section>
     <div class="content-md">
