add speaker: Hanna Babitskaya

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -193,10 +193,10 @@
 
         <li>
           <figure>
-            <img src="images/speakers/kseniya-koltun.jpg" alt="Kseniya Koltun photo">
+            <img src="images/speakers/hanna-babitskaya.jpg" alt="Hanna Babitskaya photo">
             <figcaption>
-              <span class="speaker-company">FaceMetrics</span>
-              <h3><a href="speakers/kseniya-koltun.html">Kseniya Koltun</a></h3>
+              <span class="speaker-company">Wargaming</span>
+              <h3><a href="speakers/hanna-babitskaya.html">Hanna Babitskaya</a></h3>
               <p>
                 <small>Minsk, Belarus</small>
               </p>
