--- a/app/schedule.html
+++ b/app/schedule.html
@@ -441,7 +441,8 @@
           </p>
         </li>
         <li>
-          <h3><span class="schedule-time">17:00</span><a href="speakers/mitya-osadchuk.html">Генеративный дизайн: инструменты дизайнера
+          <h3><span class="schedule-time">17:00</span><a href="speakers/mitya-osadchuk.html">Генеративный дизайн:
+            инструменты дизайнера
             будущего</a>
           </h3>
           <p class="text-sm">Mitya Osadchuk
@@ -452,11 +453,11 @@
           </p>
         </li>
         <li>
-          <h3><span class="schedule-time">18:00</span><a href="speakers/kseniya-koltun.html">Продуктовая мобильная
-            разработка - не дизайном единым. (не) про дизайн, командную работу и справедливость</a>
+          <h3><span class="schedule-time">18:00</span><a href="speakers/hanna-babitskaya.html">«Сундук позора» или как
+            развиваться за счёт неудачных работ</a>
           </h3>
-          <p class="text-sm">Kseniya Koltun
-            <small>| FaceMetrics</small>
+          <p class="text-sm">Hanna Babitskaya
+            <small>| Wargaming</small>
           </p>
           <p class="text-sm">60min | RU
             <span class="talk-place">Red Stage</span>
