--- a/app/index.html
+++ b/app/index.html
@@ -698,7 +698,14 @@
           </a>
         </li>
       </ul>
-
+      <h2>Swag Partners</h2>
+      <ul class="partner-list">
+        <li>
+          <a target="_blank" href="https://www.facebook.com/nikofirm/">
+            <img src="images/partners/logo-nikofirm.png" alt="Nikofirm logo"/>
+          </a>
+        </li>
+      </ul>
       <p>
         <a target="_blank" class="btn dark fullwidth" href="rsconf19_PARTNERSHIP.pdf">Become a partner</a>
       </p>
