--- a/app/mobile.html
+++ b/app/mobile.html
@@ -737,6 +737,14 @@
           </a>
         </li>
       </ul>
+      <h2>Swag Partners</h2>
+      <ul class="partner-list">
+        <li>
+          <a target="_blank" href="https://www.facebook.com/nikofirm/">
+            <img src="images/partners/logo-nikofirm.png" alt="Nikofirm logo"/>
+          </a>
+        </li>
+      </ul>
 
       <p>
         <a class="btn" href="become-a-partner.html">Become a Partner</a>
