--- a/app/partners.html
+++ b/app/partners.html
@@ -26,7 +26,7 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#603cba">
   <meta name="theme-color" content="#ffffff">  <!-- Place favicon.ico in the root directory -->
-      <link href="https://fonts.googleapis.com/css?family=Exo+2:400,700&amp;subset=cyrillic,latin-ext" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Exo+2:400,700&amp;subset=cyrillic,latin-ext" rel="stylesheet">
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
@@ -165,7 +165,9 @@
           </a>
         </li>
         <li>
-          <a class="partner-silver" title="Gurtam is a developer and provider of fleet management, IoT and M2M software. For more than 16 years, Gurtam solutions have entered into the national markets of 130 countries with over 2,100,000 units being currently tracked worldwide. The company was founded in 2002 and is headquartered in Minsk." target="_blank" href="https://gurtam.com/ru/about">
+          <a class="partner-silver"
+             title="Gurtam is a developer and provider of fleet management, IoT and M2M software. For more than 16 years, Gurtam solutions have entered into the national markets of 130 countries with over 2,100,000 units being currently tracked worldwide. The company was founded in 2002 and is headquartered in Minsk."
+             target="_blank" href="https://gurtam.com/ru/about">
             <img src="images/partners/logo-gurtam.png" alt="gurtam logo"/>
           </a>
         </li>
@@ -295,6 +297,14 @@
         <li>
           <a title="АйТиБорода" target="_blank" href="https://www.youtube.com/itbeard">
             <img src="images/partners/logo-itbeard.jpg" alt="itbeard logo"/>
+          </a>
+        </li>
+      </ul>
+      <h2>Swag Partners</h2>
+      <ul class="partner-list">
+        <li>
+          <a target="_blank" href="https://www.facebook.com/nikofirm/">
+            <img src="images/partners/logo-nikofirm.png" alt="Nikofirm logo"/>
           </a>
         </li>
       </ul>
