add webdev to info partners

--- a/app/partners.html
+++ b/app/partners.html
@@ -299,6 +299,11 @@
             <img src="images/partners/logo-itbeard.jpg" alt="itbeard logo"/>
           </a>
         </li>
+        <li>
+          <a title="webDev" target="_blank" href="https://www.youtube.com/channel/UCE9ODjNIkOHrnSdkYWLfYhg">
+            <img src="images/partners/logo-webdev.png" alt="webdev logo"/>
+          </a>
+        </li>
       </ul>
       <h2>Swag Partners</h2>
       <ul class="partner-list">
