add: it events ru to info partners

--- a/app/index.html
+++ b/app/index.html
@@ -702,6 +702,11 @@
             <img src="images/partners/logo-webdev.png" alt="webdev logo"/>
           </a>
         </li>
+        <li>
+          <a title="webDev" target="_blank" href="https://t.me/iteventsru">
+            <img src="images/partners/logo-iteventsru.png" alt="itevebtsru logo"/>
+          </a>
+        </li>
       </ul>
       <h2>Swag Partners</h2>
       <ul class="partner-list">
