upd: alex's talks

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -897,7 +897,8 @@
         </li>
 
         <li class="first-stream">
-          <h3><span class="schedule-time">16:10</span><a href="speakers/alexander-gerasimov.html">TBD</a></h3>
+          <h3><span class="schedule-time">16:10</span><a href="speakers/alexander-gerasimov.html">"No Foul Play"
+            Describing State with Dependently Typed FSMs</a></h3>
           <p class="text-sm">Alex Gerasimov
             <small>| wix.com</small>
           </p>
