add frontenddev to info partners

--- a/app/mobile.html
+++ b/app/mobile.html
@@ -737,13 +737,18 @@
           </a>
         </li>
         <li>
-          <a title="webDev" target="_blank" href="https://www.youtube.com/channel/UCE9ODjNIkOHrnSdkYWLfYhg">
+          <a target="_blank" href="https://www.youtube.com/channel/UCE9ODjNIkOHrnSdkYWLfYhg">
             <img src="images/partners/logo-webdev.png" alt="webdev logo"/>
           </a>
         </li>
         <li>
-          <a title="webDev" target="_blank" href="https://t.me/iteventsru">
+          <a target="_blank" href="https://t.me/iteventsru">
             <img src="images/partners/logo-iteventsru.png" alt="itevebtsru logo"/>
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://t.me/front_end_dev">
+            <img src="images/partners/logo-frontenddev.png" alt="frontenddev logo"/>
           </a>
         </li>
       </ul>
