--- a/app/index.html
+++ b/app/index.html
@@ -703,8 +703,13 @@
           </a>
         </li>
         <li>
-          <a title="webDev" target="_blank" href="https://t.me/iteventsru">
+          <a target="_blank" href="https://t.me/iteventsru">
             <img src="images/partners/logo-iteventsru.png" alt="itevebtsru logo"/>
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://t.me/front_end_dev">
+            <img src="images/partners/logo-frontenddev.png" alt="frontenddev logo"/>
           </a>
         </li>
       </ul>
