add levina's talk

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -566,7 +566,7 @@
           </p>
         </li>
         <li class="second-stream">
-          <h3><span class="schedule-time">12:40</span><a href="speakers/irina-levina.html">TBD</a></h3>
+          <h3><span class="schedule-time">12:40</span><a href="speakers/irina-levina.html">Реалити шоу "Cкрам 2 - Построй свое приложение", или Сказ о том как мы всей командой тесты писали</a></h3>
           <p class="text-sm">Irina Levina
             <small>| LeverX Group</small>
           </p>
